@@ -1,9 +1,11 @@
 {* Template for rendering validators element. Params:
 - $input_id
 - $email_receiver - 0|1
+- $regex - string, needed for custom_regex.tpl
 - $validators - array
 - $validator_ids - array, since in can contain "required" validator,
-- $validator_email_id - integer, is defined in class constant formValidators::EMAIL_ID *}
+- $validator_email_id - integer, is defined in class constant formValidators::EMAIL_ID
+- $validator_custom_regex_id - integer, is defined in class constant formValidators::CUSTOM_REGEX *}
 
 {def $selected_validator = 0}
 
@@ -21,4 +23,6 @@
 </div>
 {if $selected_validator|eq( $validator_email_id )}
     {include uri="design:forms/types/elements/email_receiver.tpl" enabled=$email_receiver input_id=$input_id}
+{elseif $selected_validator|eq( $validator_custom_regex_id )}
+    {include uri="design:forms/types/elements/custom_regex.tpl" regex=$regex input_id=$input_id}
 {/if}        
