@@ -120,6 +120,7 @@ $tpl->setVariable( 'form_name', $original_name );
 $tpl->setVariable( 'input_types', formTypes::getAllTypes() );
 $tpl->setVariable( 'separator_id', formTypes::SEPARATOR_ID );
 $tpl->setVariable( 'validator_email_id', formValidators::EMAIL_ID);
+$tpl->setVariable( 'validator_custom_regex_id', formValidators::CUSTOM_REGEX);
 
 $Result = array();
 
